# UltimateSlice

./: .gitignore  .mcp.json  .thiefsheets  CHANGELOG.md  CNAME  Cargo.toml  GEMINI.md  Gemfile  IMPROVEMENT-PLAN.md  PERFIMPROVEMENTS.md  PERFLIVE.md  PERFSUMMARY.md  PNG-Issue.md  PROXYPERF.md  README.md  ROADMAP.md  SITE-CHANGELOG.md  SPEEDRAMPCRASH.md  _config.yml  animations.md  cargo-sources.json  credits.md  features.md  index.md  install.sh  io.github.kmwallio.ultimateslice.yml  io.github.ultimateslice.yml  onnxruntime-sources.json  project.uspxml  sam-work.md  silence-removal.uspxml  take_release_screenshots.py  test_grading_mcp.py  test_multitrack_preview.py  validate_mcp_transition.py
.cargo/: config.toml
.github/workflows/: cargo-ci.yml  flatpak-ci.yml
Sample-Media/: broll-demo.fcpxml
_layouts/: default.html  doc.html  post.html
_posts/: 2026-02-28-introducing-ultimateslice.md  2026-02-28-welcome-to-jekyll.markdown
assets/css/: style.scss
blog/: index.md
data/: io.github.kmwallio.ultimateslice.desktop  io.github.kmwallio.ultimateslice.metainfo.xml  io.github.kmwallio.ultimateslice.mime.xml  io.github.ultimateslice.desktop  io.github.ultimateslice.metainfo.xml
data/models/: README.md
docs/: ARCHITECTURE.md  FCPXML.md  HDR-Buildout.md  color-scopes.md  export.md  getting-started.md  index.md  inspector.md  installation.md  media-library.md  preferences.md  program-monitor.md  project-settings.md  quickstart.md  shortcuts.md  source-monitor.md  timeline.md
docs/gpu/: README.md  amd-rocm.md  intel-arc-openvino.md  nvidia-cuda.md  troubleshooting.md  webgpu.md
docs/user/: README.md  VIDEOAUDIOALIGNMENT.md  auditions.md  color-scopes.md  effects.md  export.md  getting-started.md  inspector.md  media-library.md  mixer.md  preferences.md  program-monitor.md  project-health.md  project-settings.md  proxy-settings.md  python-mcp.md  shortcuts.md  source-monitor.md  timeline.md  titles.md  transcript.md  workspace-layouts.md
scripts/: build_onnxruntime.sh
src/: app.rs  main.rs  project_versions.rs  recent.rs  style.css  ui_state.rs  undo.rs  units.rs
src/edl/: writer.rs
src/fcpxml/: mod.rs  parser.rs  writer.rs
src/mcp/: mod.rs  server.rs
src/media/: adjustment_scope.rs  ai_providers.rs  animated_svg.rs  audio_analysis.rs  audio_features.rs  audio_match.rs  audio_sync.rs  auto_tag_cache.rs  bg_removal_cache.rs  cache_key.rs  cache_support.rs  clip_embedding_cache.rs  color_match.rs  color_math.rs  cube_lut.rs  drawing_render.rs  drawing_svg.rs  export.rs  frame_interp_cache.rs  frei0r_registry.rs  hsl_qualifier.rs  hwaccel.rs  ladspa_registry.rs  ltc.rs  mask_alpha.rs  mask_contour.rs  mod.rs  model_manifest.rs  music_gen.rs  player.rs  prerender_filters.rs  probe_cache.rs  program_player.rs  project_health.rs  proxy_cache.rs  reference_still.rs  render_replace_cache.rs  replace_media.rs  sam_cache.rs  sam_job.rs  (+11 more)
src/model/: clip.rs  compound_flattening.rs  media_library.rs  mod.rs  project.rs  through_edit.rs  track.rs  transform_bounds.rs  transition.rs
src/otio/: metadata.rs  mod.rs  parser.rs  schema.rs  writer.rs
src/ui/: mod.rs  (+33 more)
tools/: calibrate_color.py  calibrate_frei0r.py  calibrate_mcp_blend_modes.py  calibrate_mcp_color_match.py  compare_mcp_parity_profiles.py  compare_mcp_parity_reports.py  generate_test_chart.sh  mcp_call.py  mcp_parity_smoke_check.py  mcp_socket_client.py  optimize_mcp_temperature_gain.py  proxy_fps_regression.py  proxy_perf_matrix.sh  run_mcp_parity_retune_cycle.py  test_frei0r_export.py
(+2 files in other folders)
