[package]
name = "ultimate-slice"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
gstreamer = "0.25"
gstreamer-video = "0.25"
gstreamer-pbutils = "0.25"
gstreamer-app = "0.25"
glib = "0.22"
gio = "0.22"
gdk4 = "0.11"
pango = "0.22"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
thiserror = "2"
anyhow = "1"
rustfft = "6"
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
whisper-rs = { version = "0.12", optional = true }
tempfile = "3.27.0"

[features]
default = ["speech-to-text"]
ai-inference = ["ort", "ndarray"]
speech-to-text = ["whisper-rs"]

[profile.dev]
opt-level = 1
